# fastapi_zero

./: .coverage  .gitignore  pyproject.toml
fastapi_zero/: app.py  database.py  models.py  schemas.py  security.py  settings.py
fastapi_zero/routers/: auth.py  todos.py  users.py
migrations/: env.py
migrations/versions/: 54224ff1cd74_exercicio_02_aula_04.py  ee7d1782d8e7_create_users_table.py
tests/: conftest.py  test_app.py  test_auth.py  test_db.py  test_security.py  test_todos.py  test_users.py
